// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrganizerPanel coverage matrix > renders tournament table snapshot state a 1`] = `
<div
  class="overflow-x-auto"
>
  <table
    class="w-full text-left border-separate border-spacing-y-3"
  >
    <thead>
      <tr
        class="text-slate-400 text-[10px] font-black uppercase tracking-widest px-6"
      >
        <th
          class="pb-2 pl-6"
        >
          ID
        </th>
        <th
          class="pb-2"
        >
          Назва
        </th>
        <th
          class="pb-2"
        >
          Статус
        </th>
        <th
          class="pb-2 text-right pr-6"
        >
          Керування
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="bg-white border border-gray-100 shadow-sm group hover:shadow-md transition-all"
      >
        <td
          class="py-5 pl-6 rounded-l-2xl text-slate-400 font-bold"
        >
          #
          97
        </td>
        <td
          class="py-5 font-black text-slate-800 uppercase text-sm"
        >
          Tournament a
        </td>
        <td
          class="py-5"
        >
          <span
            class="px-3 py-1 rounded-full text-[9px] font-black uppercase border bg-amber-100 text-amber-700 border-amber-200"
          >
            Чернетка
          </span>
        </td>
        <td
          class="py-5 pr-6 rounded-r-2xl text-right"
        >
          <div
            class="flex justify-end gap-2"
          >
            <button
              class="p-2.5 bg-indigo-50 hover:bg-indigo-100 text-indigo-600 rounded-xl transition-colors"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
                />
                <polyline
                  points="14 2 14 8 20 8"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="13"
                  y2="13"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="17"
                  y2="17"
                />
                <polyline
                  points="10 9 9 9 8 9"
                />
              </svg>
            </button>
            <button
              class="bg-slate-800 hover:bg-black text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Редагувати
            </button>
            <button
              class="bg-red-50 hover:bg-red-500 text-red-500 hover:text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Видалити
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`OrganizerPanel coverage matrix > renders tournament table snapshot state b 1`] = `
<div
  class="overflow-x-auto"
>
  <table
    class="w-full text-left border-separate border-spacing-y-3"
  >
    <thead>
      <tr
        class="text-slate-400 text-[10px] font-black uppercase tracking-widest px-6"
      >
        <th
          class="pb-2 pl-6"
        >
          ID
        </th>
        <th
          class="pb-2"
        >
          Назва
        </th>
        <th
          class="pb-2"
        >
          Статус
        </th>
        <th
          class="pb-2 text-right pr-6"
        >
          Керування
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="bg-white border border-gray-100 shadow-sm group hover:shadow-md transition-all"
      >
        <td
          class="py-5 pl-6 rounded-l-2xl text-slate-400 font-bold"
        >
          #
          98
        </td>
        <td
          class="py-5 font-black text-slate-800 uppercase text-sm"
        >
          Tournament b
        </td>
        <td
          class="py-5"
        >
          <span
            class="px-3 py-1 rounded-full text-[9px] font-black uppercase border bg-amber-100 text-amber-700 border-amber-200"
          >
            Чернетка
          </span>
        </td>
        <td
          class="py-5 pr-6 rounded-r-2xl text-right"
        >
          <div
            class="flex justify-end gap-2"
          >
            <button
              class="p-2.5 bg-indigo-50 hover:bg-indigo-100 text-indigo-600 rounded-xl transition-colors"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
                />
                <polyline
                  points="14 2 14 8 20 8"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="13"
                  y2="13"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="17"
                  y2="17"
                />
                <polyline
                  points="10 9 9 9 8 9"
                />
              </svg>
            </button>
            <button
              class="bg-slate-800 hover:bg-black text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Редагувати
            </button>
            <button
              class="bg-red-50 hover:bg-red-500 text-red-500 hover:text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Видалити
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`OrganizerPanel coverage matrix > renders tournament table snapshot state c 1`] = `
<div
  class="overflow-x-auto"
>
  <table
    class="w-full text-left border-separate border-spacing-y-3"
  >
    <thead>
      <tr
        class="text-slate-400 text-[10px] font-black uppercase tracking-widest px-6"
      >
        <th
          class="pb-2 pl-6"
        >
          ID
        </th>
        <th
          class="pb-2"
        >
          Назва
        </th>
        <th
          class="pb-2"
        >
          Статус
        </th>
        <th
          class="pb-2 text-right pr-6"
        >
          Керування
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="bg-white border border-gray-100 shadow-sm group hover:shadow-md transition-all"
      >
        <td
          class="py-5 pl-6 rounded-l-2xl text-slate-400 font-bold"
        >
          #
          99
        </td>
        <td
          class="py-5 font-black text-slate-800 uppercase text-sm"
        >
          Tournament c
        </td>
        <td
          class="py-5"
        >
          <span
            class="px-3 py-1 rounded-full text-[9px] font-black uppercase border bg-amber-100 text-amber-700 border-amber-200"
          >
            Чернетка
          </span>
        </td>
        <td
          class="py-5 pr-6 rounded-r-2xl text-right"
        >
          <div
            class="flex justify-end gap-2"
          >
            <button
              class="p-2.5 bg-indigo-50 hover:bg-indigo-100 text-indigo-600 rounded-xl transition-colors"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
                />
                <polyline
                  points="14 2 14 8 20 8"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="13"
                  y2="13"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="17"
                  y2="17"
                />
                <polyline
                  points="10 9 9 9 8 9"
                />
              </svg>
            </button>
            <button
              class="bg-slate-800 hover:bg-black text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Редагувати
            </button>
            <button
              class="bg-red-50 hover:bg-red-500 text-red-500 hover:text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Видалити
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`OrganizerPanel coverage matrix > renders tournament table snapshot state d 1`] = `
<div
  class="overflow-x-auto"
>
  <table
    class="w-full text-left border-separate border-spacing-y-3"
  >
    <thead>
      <tr
        class="text-slate-400 text-[10px] font-black uppercase tracking-widest px-6"
      >
        <th
          class="pb-2 pl-6"
        >
          ID
        </th>
        <th
          class="pb-2"
        >
          Назва
        </th>
        <th
          class="pb-2"
        >
          Статус
        </th>
        <th
          class="pb-2 text-right pr-6"
        >
          Керування
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="bg-white border border-gray-100 shadow-sm group hover:shadow-md transition-all"
      >
        <td
          class="py-5 pl-6 rounded-l-2xl text-slate-400 font-bold"
        >
          #
          100
        </td>
        <td
          class="py-5 font-black text-slate-800 uppercase text-sm"
        >
          Tournament d
        </td>
        <td
          class="py-5"
        >
          <span
            class="px-3 py-1 rounded-full text-[9px] font-black uppercase border bg-amber-100 text-amber-700 border-amber-200"
          >
            Чернетка
          </span>
        </td>
        <td
          class="py-5 pr-6 rounded-r-2xl text-right"
        >
          <div
            class="flex justify-end gap-2"
          >
            <button
              class="p-2.5 bg-indigo-50 hover:bg-indigo-100 text-indigo-600 rounded-xl transition-colors"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
                />
                <polyline
                  points="14 2 14 8 20 8"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="13"
                  y2="13"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="17"
                  y2="17"
                />
                <polyline
                  points="10 9 9 9 8 9"
                />
              </svg>
            </button>
            <button
              class="bg-slate-800 hover:bg-black text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Редагувати
            </button>
            <button
              class="bg-red-50 hover:bg-red-500 text-red-500 hover:text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Видалити
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`OrganizerPanel coverage matrix > renders tournament table snapshot state e 1`] = `
<div
  class="overflow-x-auto"
>
  <table
    class="w-full text-left border-separate border-spacing-y-3"
  >
    <thead>
      <tr
        class="text-slate-400 text-[10px] font-black uppercase tracking-widest px-6"
      >
        <th
          class="pb-2 pl-6"
        >
          ID
        </th>
        <th
          class="pb-2"
        >
          Назва
        </th>
        <th
          class="pb-2"
        >
          Статус
        </th>
        <th
          class="pb-2 text-right pr-6"
        >
          Керування
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="bg-white border border-gray-100 shadow-sm group hover:shadow-md transition-all"
      >
        <td
          class="py-5 pl-6 rounded-l-2xl text-slate-400 font-bold"
        >
          #
          101
        </td>
        <td
          class="py-5 font-black text-slate-800 uppercase text-sm"
        >
          Tournament e
        </td>
        <td
          class="py-5"
        >
          <span
            class="px-3 py-1 rounded-full text-[9px] font-black uppercase border bg-amber-100 text-amber-700 border-amber-200"
          >
            Чернетка
          </span>
        </td>
        <td
          class="py-5 pr-6 rounded-r-2xl text-right"
        >
          <div
            class="flex justify-end gap-2"
          >
            <button
              class="p-2.5 bg-indigo-50 hover:bg-indigo-100 text-indigo-600 rounded-xl transition-colors"
            >
              <svg
                fill="none"
                height="18"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
                />
                <polyline
                  points="14 2 14 8 20 8"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="13"
                  y2="13"
                />
                <line
                  x1="16"
                  x2="8"
                  y1="17"
                  y2="17"
                />
                <polyline
                  points="10 9 9 9 8 9"
                />
              </svg>
            </button>
            <button
              class="bg-slate-800 hover:bg-black text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Редагувати
            </button>
            <button
              class="bg-red-50 hover:bg-red-500 text-red-500 hover:text-white px-4 py-2 rounded-xl text-[10px] font-bold transition-all"
            >
              Видалити
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
